# anytask_scraper

./: .dockerignore  Dockerfile  README.md  README.ru.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: Architecture.md  CHANGELOG.md  CLI.md  Changelog.md  Configuration.md  Export_Formats.md  Library_Reference.md  QuickStart.md  TUI.md
docs-en/: API.md  Changelog.md  Configuration.md  Export_Formats.md  QuickStart.md  TUI.md
docs-ru/: API.md  Changelog.md  Configuration.md  Export_Formats.md  QuickStart.md  TUI.md
src/anytask_scraper/: __init__.py  cli.py  client.py  json_db.py  models.py  parser.py  storage.py
src/anytask_scraper/api/: schemas.py  server.py
src/anytask_scraper/tui/: app.py  app.tcss  clipboard.py
src/anytask_scraper/tui/screens/: __init__.py  action_menu.py  login.py  main.py  submission.py
src/anytask_scraper/tui/screens/mixins/: __init__.py  _core.py  _export.py  _gradebook.py  _helpers.py  _queue.py  _tasks.py
src/anytask_scraper/tui/widgets/: filter_bar.py
tests/: test_api_write.py  test_cli_db.py  test_cli_settings.py  test_github_clone.py  test_json_db.py  test_queue_parser.py  test_storage_export.py  test_tui_copy.py  test_tui_export_loading.py  test_write_operations.py
