[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "anytask-scraper"
version = "0.10.2"
description = "CLI, TUI and Python library for anytask.org"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13.0",
    "textual>=0.70",
]

[project.urls]
Homepage = "https://github.com/Coldish-elf/anytask_scraper"
Repository = "https://github.com/Coldish-elf/anytask_scraper"
Issues = "https://github.com/Coldish-elf/anytask_scraper/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
anytask-scraper = "anytask_scraper.cli:main"
anytask-tui = "anytask_scraper.tui:run"
anytask-api = "anytask_scraper.api:run_server"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
