[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "anytask-scraper"
version = "1.0.0"
description = "CLI, TUI and Python library for anytask.org"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Coldish-elf"},
]
keywords = ["anytask", "cli", "tui", "scraper", "education", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.urls]
Homepage = "https://github.com/Coldish-elf/anytask_scraper"
Repository = "https://github.com/Coldish-elf/anytask_scraper"
Issues = "https://github.com/Coldish-elf/anytask_scraper/issues"
Documentation = "https://github.com/Coldish-elf/anytask_scraper/tree/main/docs-en"
Changelog = "https://github.com/Coldish-elf/anytask_scraper/blob/main/docs-en/Changelog.md"

[project.optional-dependencies]
tui = [
    "rich>=13.0",
    "textual>=0.70",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "rich>=13.0",
    "textual>=0.70",
]

[project.scripts]
anytask-scraper = "anytask_scraper.cli:main"
anytask-tui = "anytask_scraper.tui:run"
anytask-api = "anytask_scraper.api:run_server"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anytask_scraper = ["py.typed", "tui/*.tcss"]
